[gd_scene load_steps=4 format=2]

[ext_resource path="res://raw_assets/images/ui-icons/next-day.png" type="Texture" id=1]
[ext_resource path="res://src/UI/WorldUI/WorldUI.gd" type="Script" id=2]
[ext_resource path="res://godot_assets/theme/main.theme" type="Theme" id=3]

[node name="WorldUI" type="MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -133.0
margin_bottom = 68.0
grow_horizontal = 0
size_flags_horizontal = 8
theme = ExtResource( 3 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 5.0
margin_right = 148.0
margin_bottom = 69.0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 64.0
alignment = 1

[node name="Day" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 20 )
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 80.0
margin_bottom = 64.0
size_flags_horizontal = 11
size_flags_vertical = 11

[node name="TimeIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 38.0
margin_bottom = 36.0
size_flags_horizontal = 11
size_flags_vertical = 11
expand = true
stretch_mode = 5

[node name="WeatherIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 36.0
size_flags_horizontal = 11
size_flags_vertical = 11
expand = true
stretch_mode = 5

[node name="PassTimeButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 1 )
expand = true

[connection signal="pressed" from="HBoxContainer/PassTimeButton" to="." method="_on_PassTimeButton_pressed"]
